[package]
name = "r0-execute"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
risc0-zkvm = { version = "2.3.1", default-features = false, features = ["unstable","prove"] }
bincode = "1.3"
boundless-market = { git = "https://github.com/boundless-xyz/boundless", version = "0.15.0" }
